--- a/website/templates/userLogin.html
+++ b/website/templates/userLogin.html
@@ -8,13 +8,20 @@
         <h1 class="display-4">Sign In</h1>
     </div> 
 </div>
-<div class="row">
-    <form method="POST" action="{{ url_for('views.checkUser') }}">
-        <div class="mb-3">
-            <label for="email" class="form-label">Email:</label>
-            <input type="email" class="form-control" id="email" name="email" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Log in</button>
 
+<div class="row justify-content-left">
+    <div class="col-md-6" style="outline: 1px solid black; border-radius: 10px; padding: 20px;">
+        <form method="POST" action="{{ url_for('views.userLogin') }}">
+            <div class="mb-3">
+                <label for="email" class="form-label">Email:</label>
+                <input type="email" class="form-control" id="email" name="email" value="{{ email }}" required>
+                
+                <label for="password" class="form-label mt-3">Password:</label>
+                <input type="password" class="form-control" id="password" name="password" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Log in</button>
+        </form>
+        <p class="mt-3">Don't have an account? <a href="{{ url_for('views.userInit') }}">Start here</a></p>
+    </div>
 </div>
-{%endblock%}
+{% endblock %}
